# common/request/system/login_request.go
@@ -1,8 +1,8 @@
 package request
 
 type SignRequest struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
+	Username string `json:"username" binding:"required" form:"username"`
+	Password string `json:"password" binding:"required" form:"password"`
 }
 
 type SignResponse struct {
