# common/response/page_response.go
@@ -1,0 +1,6 @@
+package response
+
+type PageResponse struct {
+	Total int64 `json:"total"`
+	List  interface{}
+}
